Add support for big integers.